# datatools

./: .bumpversion.cfg  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  README.md  example_usage.py  index.html  mkdocs.yml  npm-shrinkwrap.json  objects.inv  package.json  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.json3.datapackage.json  tmpa9dcdd_o.sqlite3  tox.ini  update_example_usage.py
.data/home/c/git/datatools/: setup.py.metadata.json
.github/workflows/: build-and-deploy.yml  docs.yml  pages.yml  publish.yml  pypi.yml  test.yml
WIP_activity/: fuseki_rdflib.ipynb  pipeline.py  pipeline2.py
api/: index.html
data/: README.md  create_example.py  deref_schema.py  json-schema.example.json  openapis.example.json  resource.example.json  resource.schema.json  tabular-data-package.schema.json  tabular-data-resource.example.json  tabular-data-resource.schema.json
data/source/specs.frictionlessdata.io/schemas/: tabular-data-package.json  tabular-data-resource.json
datatools/: __init__.py  __main__.py  base.py  bytes.py  cache.py  classes.py  cli.py  conf.py  constants.py  convert.py  converter.py  converters.py  datapackage.py  datetime.py  dt.py  exceptions.py  files.py  generators.py  identify.py  info.py  io.py  load.py  loader.py  loaders.py  location.py  logging.py  main.py  metadata.py  package.py  path.py  process.py  requests.py  resource.py  schema.py  scons_datapackage.py  shortcuts.py  sql.py  storage.py  task.py  tests.py  (+6 more)
datatools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datatools/_archive/: example_memory_storage.py  loader.py
datatools/_old/_test/: __test_scons.py  _test_main.py
datatools/_old/schema/: jsonschema.schema.json
datatools/_todo/: bytes.py  cli.py  combined.py  datapackage.py  files.py  json.py  metadata.py  scons_datapackage.py  sql.py  utils.py  zipfile.py
datatools/_todo/validate/: __init__.py  exceptions.py  factories.py
datatools/classes/: __init__.py
datatools/converter/: __init__.py
datatools/data/: fix_frictionless_examples.py  openapis.schema.json  tabular-data-package.example.json
datatools/data/source/: README.md
datatools/data/source/raw.githubusercontent.com/frictionlessdata/specs/master/schemas/: dictionary.json
datatools/data/source/swagger.io/v2/: schema.json
datatools/importer/: __init__.py
datatools/job/: __main__.py  classes.py  importer.py  job.py  types.py
datatools/process/: __init__.py  importer.py  task.py
datatools/schema/: __init__.py
datatools/storage/: __init__.py  __main__.py  base.py  classes.py  cli.py  combined.py  exceptions.py  file.py  files.py  http.py  imap.py  mail.py  memory.py  metadata.py  server.py  sql.py  storage.py  types.py
datatools/test/: __init__.py  __test_schema.py  test.ipynb  test_location.py  test_main.py  test_utils.py  test_validate.py
datatools/test/data/datapackage1/: resource1.csv
datatools/test/data/datapackage1/data/: resource3.json
datatools/test/data/datapackages/datapackage1/: datapackage.json
datatools/test/data/datapackages/datapackage1/data/: resource2.json
datatools/test/data/jsonstore/example1/: example1.json
datatools/test/data/jsonstore/example2/: example2.json
datatools/tests/: __init__.py  test_datatools.py  test_frictionless.py  test_jsonschema.py
datatools/utils/: __init__.py  _classes.py  byte.py  bytes.py  cache.py  cli.py  collection.py  database.py  datetime.py  env.py  filepath.py  http.py  json.py  requests.py  sql.py  temp.py  text.py  uri.py  zip.py
datatools/validate/: __init__.py  factories.py  utils.py
docs/: api.md  example.ipynb  example.md  example.py  example_usage.py  index.md
example/: index.html
pages/schema/: index.html  main.js  main.scss
redesign/: d1.csv  main.py  mockup.py  rdf.py  utils.py
schema/: FileResource-0.0.0.schema.json  datatoolsFileResource-0.0.0.schema.json  json-schema.schema.json  jsonschema.schema.json  openapis.schema.json  schema.py  tabular-data-package.schema.json  tabular-data-resource.schema.json
schema/data/specs.frictionlessdata.io/schemas/: tabular-data-package.json  tabular-data-resource.json
schema_examples/: json-schema.example.json  openapis.example.json  tabular-data-package.example.json  tabular-data-resource.example.json
search/: search_index.json
test/: __init__.py  __test_main.py  __test_schema.py  test_bytes_iterator.py  test_cli.py  test_convert.py  test_datetime.py  test_location.py  test_main.py  test_resource.py  test_schema.py  test_scons.py  test_storage.py  test_task.py  test_utils.py  test_validate.py
test/data/: mime.json  mime.txt  mime.xlsx
test/example/: SConstruct
tests/: __init__.py  _test_03_storage_ext.py  base.py  test_01_utils.py  test_02_storage.py  test_03_storage_ext.py  test_03_todo.py  test_04_cache.py  test_05_sql.py  test_datatools.py  test_datatools_converter.py  test_datatools_example.py  test_datatools_process.py  test_datatools_storage.py  test_datatools_utils.py  test_docs_example.py  test_doctests.py  test_example_usage.py  test_frictionless.py  test_function.py  test_job.py  test_jsonschema.py  test_mail.py  test_resource.py  test_schema.py  test_snakemake.Snakefile  test_snakemake.py  test_storage.py  test_task.py  test_use_cases.py  test_utils.py
tests/mock/: __init__.py  imap.py
