[project]
name = "wingechr-datatools"
version = "0.14.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Christian Winger", email = "c@wingechr.de" }]
dependencies = [
    "coloredlogs~=15.0",
    #"appdirs>=1.4.4",
    #"chardet>=5.2.0",
    #"jsonpath-ng>=1.7.0",
    #"openpyxl>=3.1.5",
    #"pandas>=2",
    #"pyodbc>=5.2.0",
    #"rdflib>=7.1.4",
    #"requests>=2",
    #"sqlalchemy>=2.0.41",
    #"sqlparse>=0.5.3",
    #"tzlocal>=5.3.1",
    #"unidecode~=1.4.0",
]
[dependency-groups]
dev = ["bumpversion~=0.6", "pre-commit~=4.2"]
poe = ["poethepoet~=0.38"]
test = [
    "tox-uv~=1.33", # for uv-venv-runner
    "pytest~=9.0",
    "tox~=4.47",
]
docs = [
    "mdx-truly-sane-lists~=1.3",
    "mistune~=2.0",
    "mkdocs~=1.6,<2.0",          # 2.0 is incompatible with material
    "mkdocs-material~=9.7",      # NOTE problems installing in windows
    "mkdocstrings-python~=1.16",
    "pymdown-extensions~=10.16",
]
[tool.setuptools.packages.find]
include = ["datatools"]

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.scripts]
datatools = "datatools.__main__:main"

[tool.tox]
envlist = ["py310", "py313"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner" # use tox-uv
commands = [["pytest"]]


[tool.poe.tasks]
test = "uv run tox"
docs = "uv run mkdocs build"
run = "uv run -m datatools -l debug"
