[project]
name = "wingechr-datatools"
version = "0.15.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Christian Winger", email = "c@wingechr.de" }]
dependencies = [
    "appdirs>=1.4.4",
    "chardet>=7.4.3",
    "click>=8.3.1",
    "coloredlogs>=15.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "jsonpath-ng>=1.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "rdflib>=7.6.0",
    "sqlalchemy>=2.0.51",
    "sqlparse>=0.5.5",
    "typing-extensions>=4.15.0",
    "tzlocal>=5.4.3",
    "uvicorn>=0.49.0",
]
[dependency-groups]
dev = ["bumpversion>=0.6", "pre-commit>=4.2"]
poe = ["poethepoet>=0.38"]
test = [
    "tox-uv>=1.33",      # for uv-venv-runner
    "pytest>=9.0",
    "tox>=4.47",
    "pytest-cov>=7.0.0",
    "snakemake>=7.32.4",
]
docs = [
    "mdx-truly-sane-lists>=1.3",
    "mistune>=2.0",
    "mkdocs>=1.6,<2.0",          # 2.0 is incompatible with material
    "mkdocs-material>=9.7",      # NOTE problems installing in windows
    "mkdocstrings-python>=1.16",
    "pymdown-extensions>=10.16",
]
[tool.setuptools.packages.find]
include = ["datatools"]

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.scripts]
datatools = "datatools.__main__:main"

[tool.tox]
envlist = ["py311", "py312", "py313"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner" # use tox-uv
commands = [["pytest"]]


[tool.poe.tasks]
cov = "uv run pytest --cov=datatools --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml:coverage.xml"
test = "uv run tox"
docs = "uv run mkdocs build"
run = "uv run -m datatools -l debug"
build = "uv build"
