[project]
name = "wingechr-datatools"
version = "0.15.8"
description = "TODO"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [{ name = "Christian Winger", email = "c@wingechr.de" }]
dependencies = [
    "appdirs>=1.4",
    "chardet>=7.4",
    "click>=8.3",
    "coloredlogs>=15.0",
    "fastapi>=0.138",
    "frictionless>=5.19",
    "httpx>=0.28",
    "imapclient~=3.0",
    "jsonpath-ng>=1.8",
    "openpyxl>=3.0",
    "pandas>=2.0",
    "pydantic>=2.13",
    "python-dateutil>=2.9.0.post0",
    "rdflib>=7.6",
    "sqlalchemy>=2.0",
    "sqlparse>=0.5",
    "starlette>=1.3",
    "typing-extensions>=4.15",
    "tzlocal>=5.4",
    "uvicorn>=0.49",
]
[dependency-groups]
dev = ["bump-my-version>=1.4", "pre-commit>=4.2", "poethepoet>=0.38"]
test = [
    "tox-uv>=1.33",                               # for uv-venv-runner
    "pytest>=9.0",
    "tox>=4.47",
    "pytest-cov>=7.0",
    "snakemake >= 9.0; python_version >= '3.11'",

]
docs = [
    "mdx-truly-sane-lists>=1.3",
    "mistune>=2.0",
    "mkdocs>=1.6,<2.0",          # 2.0 is incompatible with material
    "mkdocs-material>=9.7",
    "mkdocstrings-python>=1.16",
    "pymdown-extensions>=10.16",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.scripts]
datatools = "datatools.__main__:main"


[tool.bumpversion]

current_version = "0.15.8"
commit = true
tag = true
message = "version: {current_version} → {new_version}"
pre_commit_hooks = ["uv lock", "git add uv.lock"]


[[tool.bumpversion.files]]
filename = "datatools/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.tox]
envlist = ["py310", "py314"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner" # use tox-uv
commands = [["pytest"]]


[tool.poe.tasks]
cov = "uv run -p3.11 pytest -v --cov=datatools --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml:coverage.xml"
test = "uv run tox"
docs = "uv run mkdocs build"
run = "uv run -m datatools -l debug"
build = "uv build"
bump = "bump-my-version bump"
